--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,8 @@ h1.banner-title {
 .mindset {
   margin-top: 150px;
   margin: 5% 20%;
-  background-image: url("../images/watch.png");
+  background-image: url("../images/watch.png"), url("../images/gradient1.png");
+  background-blend-mode: screen;
   background-repeat: no-repeat;
   padding: 80px;
   border-radius: 5px;
